--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
-spring.datasource.username=coding_events
-spring.datasource.password=coding_events
+spring.datasource.url=jdbc:mysql://localhost:3306/library
+spring.datasource.username=library
+spring.datasource.password=library
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
